@@ -1,7 +1,6 @@
 [buildout]
 extends =
-    http://svn.plone.org/svn/collective/buildout/plonetest/test-4.x.cfg
-    http://good-py.appspot.com/release/plone.app.registry/1.0b2
+    https://raw.github.com/collective/buildout.plonetest/master/test-4.x.cfg
 package-name = collective.contentrules.comingsoon
 
 parts +=
