@@ -4,6 +4,7 @@ from DateTime import DateTime
 from ZODB.POSException import ConflictError
 from zope.component import getUtility
 from zope.event import notify
+from zope.publisher.publish import mapply
 
 from plone.registry.interfaces import IRegistry
 from Products.CMFCore.utils import getToolByName
@@ -19,17 +20,20 @@ class NotifyComingSoon(BrowserView):
     """View that notifies contents that are coming soon,
     so that launches IComingSoon rules
     """
-
-    def notify(self):
-
+    def __call__(self):
+        return mapply(self.notify, (), self.request)
+    
+    def notify(self, index='start'):
         registry = getUtility(IRegistry)
         delay = registry.forInterface(IComingSoonSettings).delay
 
         catalog = getToolByName(self.context, 'portal_catalog')
 
         deadline = DateTime(DateTime().Date()) + delay
-        brains = catalog.searchResults(start={'query': (deadline, deadline + 1),
-                                              'range': 'minmax'})
+        
+        params = {index: {'query': (deadline, deadline + 1),
+                          'range': 'minmax'}}
+        brains = catalog.searchResults(**params)
         error = 0
         for brain in brains:
             try:
